[package]
name = "graphql-ws-client"
version = "0.8.0-alpha.1"
authors = ["Graeme Coupar <graeme@polyandglot.dev>"]
edition = "2018"
resolver = "2"
description = "A graphql over websockets client"
keywords = ["graphql", "client", "api", "websockets", "subscriptions"]
license = "Apache-2.0"
autoexamples = false
documentation = "https://docs.rs/graphql-ws-client"
readme = "README.md"
repository = "https://github.com/obmarg/graphql-ws-client"

[workspace]
members = ["examples", "examples-wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async-tungstenite"]
client-cynic = ["async-tungstenite", "cynic"]
client-graphql-client = ["async-tungstenite", "graphql_client"]
ws_stream_wasm = ["dep:ws_stream_wasm", "no-logging", "pharos", "pin-project-lite"]
no-logging = []

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

cynic = { version = "3", optional = true }
async-tungstenite = { version = "0.24", optional = true }
graphql_client = { version = "0.13.0", optional = true }

ws_stream_wasm = { version = "0.7", optional = true }
pin-project-lite = { version = "0.2.7", optional = true }
pharos = { version = "0.5.2", optional = true }

[dev-dependencies]
assert_matches = "1.5"
async-graphql = "5.0.10"
async-graphql-axum = "5"
async-tungstenite = { version = "0.24", features = ["tokio-runtime"] }
axum = "0.6"
cynic = { version = "3" }
insta = "1.11"
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
