[package]
name = "examples-wasm"
version = "0.1.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-ws-client = { path = "../", default-features = false, features = ["cynic", "ws_stream_wasm"] }
async-std = { version = "1.9", features = ["attributes"] }
async_executors = { version = "0.5", features = ["async_std"] }
cynic = { version = "1.0" }
futures = { version = "0.3"}
log = "0.4"

# wasm-specific
ws_stream_wasm = "0.7"
wasm-bindgen = "0.2"
console_log = "0.2"

[dev-dependencies]
insta = "1.11"
