[package]
name = "examples-wasm"
version = "0.12.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
cynic = { version = "3" }
futures = { version = "0.3" }
log = "0.4"

# wasm-specific
ws_stream_wasm = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"

[dependencies.graphql-ws-client]
path = "../"
version = "0.12.0"
default-features = false
features = ["cynic", "ws_stream_wasm"]

[dev-dependencies]
insta = "1.11"

[lints]
workspace = true
