[package]
name = "examples"
version = "0.11.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
async-tungstenite = { version = "0.31", features = [
    "async-std-runtime",
    "tokio-runtime",
] }
cynic = { version = "3" }
futures = { version = "0.3" }
graphql_client = { version = "0.14" }
serde = "1"
tokio = { version = "1.15", features = ["rt-multi-thread", "macros"] }

[dependencies.graphql-ws-client]
path = "../"
version = "0.11.1"
default-features = false
features = ["cynic", "tungstenite-0.27"]

[lints]
workspace = true
